--- a/index.html
+++ b/index.html
@@ -52,22 +52,34 @@
       border-bottom: 1px solid #2d3748;
       display: flex;
       align-items: center;
-      justify-content: center;
-      gap: var(--space-md);
+      justify-content: space-between;
+      position: relative;
     }
 
     .header-content {
       display: flex;
       align-items: center;
       gap: var(--space-md);
+      flex-grow: 1;
+      justify-content: center;
     }
 
     .header-image {
-      width: 60px;
-      height: 60px;
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       object-fit: cover;
       border: 2px solid #a78bfa;
+      flex-shrink: 0;
+    }
+
+    .header-image-left {
+      margin-right: auto;
+      order: -1;
+    }
+
+    .header-image-right {
+      margin-left: auto;
     }
 
     .app-header h1 {
@@ -197,10 +209,18 @@
       .app-header {
         flex-direction: column;
         text-align: center;
+        gap: var(--space-md);
       }
 
       .header-content {
         flex-direction: column;
+      }
+
+      .header-image-left,
+      .header-image-right {
+        margin: 0;
+        width: 60px;
+        height: 60px;
       }
     }
   </style>
@@ -208,13 +228,16 @@
 <body>
   <div class="app-container">
     <header class="app-header">
+      <img src="images/otus_scops.jpg" alt="Сова сплюшка" class="header-image header-image-left">
+      
       <div class="header-content">
-        <img src="images/IMG_541.jpg" alt="Ночная хищная птица" class="header-image">
         <div>
           <h1>Тренажер по ночным хищным птицам</h1>
           <p class="subtitle">Изучение сов, филинов и других ночных хищников</p>
         </div>
       </div>
+      
+      <img src="images/IMG_541.jpg" alt="Ночная хищная птица" class="header-image header-image-right">
     </header>
 
     <main class="main-content">
