--- a/pigeontoothed.html
+++ b/pigeontoothed.html
@@ -552,7 +552,7 @@
             {
                 name: "Вяхирь",
                 scientific: "Columba palumbus",
-                image: "imagescolumba/Columba_palumbus.jpg",
+                image: "imagescolumba/columba_palumbus.jpg",
                 description: "Вяхирь — самый крупный из голубей, обитающих в Европе. Длина тела 40-45 см, размах крыльев 75-80 см. Оперение серо-голубое, с белыми пятнами на шее и белыми полосами на крыльях. Обитает в лесах, парках и садах. Питается семенами, зёрнами, ягодами и молодыми побегами растений."
             },
             {
@@ -564,24 +564,24 @@
             {
                 name: "Обыкновенная горлица",
                 scientific: "Streptopelia turtur",
-                image: "imagescolumba/Streptopelia_turtur.jpg",
+                image: "imagescolumba/streptopelia_turtur.jpg",
                 description: "Обыкновенная горлица — небольшой изящный голубь длиной 26-28 см. Оперение охристо-коричневое с чёрно-белым рисунком на шее. Хвост с белой каймой. Обитает в светлых лесах, парках и садах. Питается семенами растений, которые собирает на земле."
             },
             {
                 name: "Кольчатая горлица",
                 scientific: "Streptopelia decaocto",
-                image: "imagescolumba/Streptopelia_decaocto.jpg",
+                image: "imagescolumba/streptopelia_decaocto.jpg",
                 description: "Кольчатая горлица — голубь средних размеров, длиной 31-33 см. Оперение бежево-серое с чёрным полукольцом на шее. Хвост длинный с белыми перьями по краям. Обитает в городах, парках и садах. Питается семенами и зёрнами."
             },
             {
                 name: "Большая горлица",
                 scientific: "Streptopelia orientalis",
-                image: "imagescolumba/Streptopelia_orientalis.jpg",
+                image: "imagescolumba/streptopelia_orientalis.jpg",
                 description: "Большая горлица — крупный представитель горлиц, длиной 33-35 см. Оперение коричневато-серое с чешуйчатым рисунком на крыльях и чёрно-белым полосатым рисунком на шее. Обитает в лесах и парках. Питается семенами и ягодами."
             },
             {
                 name: "Африканский зелёный голубь",
-                scientific: "Treron calvus",
+                scientific: "treron calvus",
                 image: "imagescolumba/Treron_calvus.jpg",
                 description: "Африканский зелёный голубь — ярко окрашенная птица с преимущественно зелёным оперением. Длина тела 25-28 см. Обитает в лесах и саваннах Африки. Питается преимущественно фруктами и ягодами. В отличие от большинства голубей, часто кормится, вися вниз головой на ветвях."
             },
