--- a/pigeontoothed.html
+++ b/pigeontoothed.html
@@ -581,8 +581,8 @@
             },
             {
                 name: "Африканский зелёный голубь",
-                scientific: "treron calvus",
-                image: "imagescolumba/Treron_calvus.jpg",
+                scientific: "Treron calvus",
+                image: "imagescolumba/treron_calvus.jpg",
                 description: "Африканский зелёный голубь — ярко окрашенная птица с преимущественно зелёным оперением. Длина тела 25-28 см. Обитает в лесах и саваннах Африки. Питается преимущественно фруктами и ягодами. В отличие от большинства голубей, часто кормится, вися вниз головой на ветвях."
             },
             {
