--- a/pigeontoothed.html
+++ b/pigeontoothed.html
@@ -498,7 +498,7 @@
                 <li>Птенцов выкармливают "зобным молочком" — питательной массой, вырабатываемой в зобе</li>
             </ul>
             
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/African_Green_Pigeon_%28Treron_calvus%29.jpg/800px-African_Green_Pigeon_%28Treron_calvus%29.jpg" alt="Африканский зелёный голубь">
+            <img src="imagescolumba/treror.jfif" alt="Африканский зелёный голубь">
             
             <h3>Размножение</h3>
             <p>Особенности размножения голубеобразных:</p>
