--- a/pigeontoothed.html
+++ b/pigeontoothed.html
@@ -586,6 +586,12 @@
                 description: "Африканский зелёный голубь — ярко окрашенная птица с преимущественно зелёным оперением. Длина тела 25-28 см. Обитает в лесах и саваннах Африки. Питается преимущественно фруктами и ягодами. В отличие от большинства голубей, часто кормится, вися вниз головой на ветвях."
             },
             {
+                name: "Бриллиантовая горлица",
+                scientific: "Geopelia cuneata",
+                image: "images/geopelia_cuneata.jpg",
+                description: "Маленькая (до 20 см) австралийская горлица с красивым рисунком из белых точек на крыльях. Самцы в брачный период издают нежные воркующие звуки."
+            },
+            {
                 name: "Венценосный голубь",
                 scientific: "Goura spp.",
                 image: "imagescolumba/goura_scheepmakeri.jpg",
