--- a/pigeontoothed.html
+++ b/pigeontoothed.html
@@ -588,7 +588,7 @@
             {
                 name: "Бриллиантовая горлица",
                 scientific: "Geopelia cuneata",
-                image: "images/geopelia_cuneata.jpg",
+                image: "imagescolumba/geopelia_cuneata.jpg",
                 description: "Маленькая (до 20 см) австралийская горлица с красивым рисунком из белых точек на крыльях. Самцы в брачный период издают нежные воркующие звуки."
             },
             {
