--- a/pigeontoothed.html
+++ b/pigeontoothed.html
@@ -376,7 +376,7 @@
                     <a href="#" class="menu-item" data-page="study">Режим изучения</a>
                     <a href="#" class="menu-item" data-page="quiz">Режим тестирования</a>
                     <a href="#" class="menu-item" data-page="order-info">Об отряде Голубеобразные</a>
-                    <a href="columba0.html" class="menu-item" target="_blank">Статистика отряда</a>
+                    <a href="trainer3/columba0.html" class="menu-item" target="_blank">Статистика отряда</a>
                 </div>
             </div>
         </div>
